# lpaggreg

./: CMakeLists.txt
R/: example.R  example_nemo_cluster.R  example_nemo_counter.R  lpaggreg_pjdump.R
src/: CMakeLists.txt
src/lpaggreg/: CMakeLists.txt
src/lpaggreg/headers/: opartition.h  quality.h  tradeoff.h
src/lpaggreg/sources/: opartition.cpp  quality.cpp  tradeoff.cpp
test/: CMakeLists.txt
test/dpartitioner_2d_standard/: CMakeLists.txt
test/hpartitioner_1d_advanced/: CMakeLists.txt
test/hpartitioner_1d_standard/: CMakeLists.txt
test/hpartitioner_2d_advanced/: CMakeLists.txt
test/hpartitioner_2d_standard/: CMakeLists.txt
test/hpartitioner_3d_advanced/: CMakeLists.txt
test/hpartitioner_3d_standard/: CMakeLists.txt
test/hpartitioner_4d_advanced/: CMakeLists.txt
test/hpartitioner_4d_standard/: CMakeLists.txt
test/opartitioner_1d_advanced/: CMakeLists.txt
test/opartitioner_1d_standard/: CMakeLists.txt
test/opartitioner_2d_advanced/: CMakeLists.txt
test/opartitioner_2d_standard/: CMakeLists.txt
test/opartitioner_3d_advanced/: CMakeLists.txt
test/opartitioner_3d_standard/: CMakeLists.txt
test/opartitioner_4d_advanced/: CMakeLists.txt
test/opartitioner_4d_standard/: CMakeLists.txt
